[metadata]
name = nice-tool-kit
version = file: VERSION
description = My personal toolkit
author = vuonglv
author_email = it.vuonglv@gmail.com
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    lxml>=4.9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xmlformat = xmlformatter.cli:main
