[metadata]
name = nice-tool-kit
version = file: VERSION
description = My personal toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = vuonglv
author_email = it.vuonglv@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/vuonglv1612/nicetoolkit

[options]
python_requires = >=3.7
install_requires =
    lxml>=4.9.0

[options.entry_points]
console_scripts =
    xmlformat = nicetoolkit.xmlformatter:main
    awslog = nicetoolkit.awslog:main
